samples/_failures_safe/1761337227_b73fd0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e6426355.c: In function ‘main’:
./samples/SAFE/__tmp_e6426355.c:156:21: error: expected declaration or statement at end of input
  156 |                     break;
      |                     ^~~~~
./samples/SAFE/__tmp_e6426355.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e6426355.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e6426355.c:156:21: error: expected declaration or statement at end of input
